--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <div class="main">
-    <img src="C:\Users\DELL\Downloads\product-preview-card-component-main\product-preview-card-component-main\images\image-product-desktop.jpg" alt="perfume" class="perfume">
+    <img src="image-product-desktop.jpg" alt="perfume" class="perfume">
     <h2>P E R F U M E</h2>
     <h1>Gabrielle Essence Eau De Parfum</h1>
 
@@ -28,7 +28,7 @@
       $149.99<h4><hr>$169.99</h4>
     </h5>
     <div class="button">
-      <p><img src="C:\Users\DELL\Downloads\product-preview-card-component-main\product-preview-card-component-main\images\icon-cart.svg" alt="icon" class="icon"> Add to Cart</p>
+      <p><img src="icon-cart.svg" alt="icon" class="icon"> Add to Cart</p>
     </div>  
   </div>
   <div class="attribution">
