--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <title>Frontend Mentor | Product preview card component</title>
 
   <!--Google Fonts-->
-  <link href="https://fonts.google.com/specimen/Montserrat">
-  <link href="https://fonts.google.com/specimen/Fraunces">
+  <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&display=swap" rel="stylesheet">
 
   <!--CSS Stylesheet-->
   <link rel="stylesheet" href="styles8.css">
