--- a/index.html
+++ b/index.html
@@ -11,29 +11,39 @@
   <!--Google Fonts-->
   <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&display=swap" rel="stylesheet">
-
   <!--CSS Stylesheet-->
   <link rel="stylesheet" href="styles8.css">
 
 </head>
 <body>
-  <div class="main">
-    <img src="image-product-desktop.jpg" alt="perfume" class="perfume">
-    <h2>P E R F U M E</h2>
-    <h1>Gabrielle Essence Eau De Parfum</h1>
+  <main>
+    <div class="main">
+      <img src="C:\Users\DELL\Downloads\product-preview-card-component-main\product-preview-card-component-main\images\image-product-desktop.jpg" alt="perfume" class="perfume">
+      <h2>P E R F U M E</h2>
+      <h1>Gabrielle Essence Eau De Parfum</h1>
 
-    <h3>A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-    Perfumer-Creator for the House of CHANEL.</h3>
-    <h5>
-      $149.99<h4><hr>$169.99</h4>
-    </h5>
-    <div class="button">
-      <p><img src="icon-cart.svg" alt="icon" class="icon"> Add to Cart</p>
-    </div>  
+      <h3>A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+      Perfumer-Creator for the House of CHANEL.</h3>
+      <div class="price">
+      <h5>
+        $149.99
+        <h4>
+          <hr>$169.99
+        </h4>
+      </h5>
+      </div>
+      <div class="button">
+        <p>
+          <img src="C:\Users\DELL\Downloads\product-preview-card-component-main\product-preview-card-component-main\images\icon-cart.svg" alt="icon" class="icon"> 
+          Add to Cart
+        </p>
+      </div>  
   </div>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener">Frontend Mentor</a>. 
+      Coded by <a href="#">Your Name Here</a>.
+    </div>
+  </footer>  
 </body>
 </html>
