--- a/index.html
+++ b/index.html
@@ -1,49 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
-  <title>Frontend Mentor | Product preview card component</title>
+    <title>Frontend Mentor | Product preview card component</title>
 
-  <!--Google Fonts-->
-  <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&display=swap" rel="stylesheet">
-  <!--CSS Stylesheet-->
-  <link rel="stylesheet" href="styles8.css">
+    <!--Google Fonts-->
+    <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&display=swap" rel="stylesheet">
+    <!--CSS Stylesheet-->
+    <link rel="stylesheet" href="styles8.css">
 
-</head>
-<body>
-  <main>
-    <div class="main">
-      <img src="image-product-desktop.jpg" alt="perfume" class="perfume">
-      <h2>P E R F U M E</h2>
-      <h1>Gabrielle Essence Eau De Parfum</h1>
-
-      <h3>A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-      Perfumer-Creator for the House of CHANEL.</h3>
-      <div class="price">
-      <h5>
-        $149.99
-        <h4>
-          <hr>$169.99
-        </h4>
-      </h5>
+  </head>
+  <body>
+    <main>
+      <div class="card">
+        <div class="picture">
+          <picture>
+            <img src="C:\Users\DELL\Downloads\product-preview-card-component-main\product-preview-card-component-main\images\image-product-desktop.jpg" alt="perfume-picture">
+          </picture>
+        </div>
+          <div class="right">
+            <div class="img-details">
+              <h2>PERFUME</h2>
+             <p>Gabrielle Essence Eau De Parfum</p>
+            </div>  
+            <div class="img-description">
+             <p>A floral,solar and voluptuous interpretation compsed by Olivier Polge,Perfumer-Creator for the House of CHANEL.</p>
+            </div>
+            <div class="prices">
+              <p class="new-price">
+                $149.99
+              </p>
+              <p class="old-price">
+                <s>$169.99</s>
+              </p>
+            </div>
+              <button>
+                <img src="C:\Users\DELL\Downloads\product-preview-card-component-main\product-preview-card-component-main\images\icon-cart.svg" alt="icon-cart">
+                <p id="button">Add to Cart</p>
+              </button>  
+          </div>    
       </div>
-      <div class="button">
-        <p>
-          <img src="icon-cart.svg" alt="icon" class="icon"> 
-          Add to Cart
-        </p>
-      </div>  
-  </div>
-  <footer>
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener">Frontend Mentor</a>. 
-      Coded by <a href="https://github.com/sniper23403/product-card-">sniper23403</a>.
-    </div>
-  </footer>  
-</body>
+    </main>  
+  </body>
 </html>
