--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="card">
         <div class="picture">
           <picture>
-            <img src="C:\Users\DELL\Downloads\product-preview-card-component-main\product-preview-card-component-main\images\image-product-desktop.jpg" alt="perfume-picture">
+            <img src="image-product-desktop.jpg" alt="perfume-picture">
           </picture>
         </div>
           <div class="right">
@@ -40,7 +40,7 @@
               </p>
             </div>
               <button>
-                <img src="C:\Users\DELL\Downloads\product-preview-card-component-main\product-preview-card-component-main\images\icon-cart.svg" alt="icon-cart">
+                <img src="images\icon-cart.svg" alt="icon-cart">
                 <p id="button">Add to Cart</p>
               </button>  
           </div>    
