--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               </p>
             </div>
               <button>
-                <img src="images\icon-cart.svg" alt="icon-cart">
+                <img src="icon-cart.svg" alt="icon-cart">
                 <p id="button">Add to Cart</p>
               </button>  
           </div>    
