--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!--Google Fonts-->
     <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,900&display=swap" rel="stylesheet">
     <!--CSS Stylesheet-->
     <link rel="stylesheet" href="styles8.css">
 
@@ -20,28 +20,19 @@
       <div class="card">
         <div class="picture">
           <picture>
-            <img src="image-product-desktop.jpg" alt="perfume-picture">
+            <img src="image-product-desktop.jpg" alt="perfume-picture" class="img" srcset="">
           </picture>
         </div>
           <div class="right">
-            <div class="img-details">
               <h2>PERFUME</h2>
-             <p>Gabrielle Essence Eau De Parfum</p>
-            </div>  
-            <div class="img-description">
-             <p>A floral,solar and voluptuous interpretation compsed by Olivier Polge,Perfumer-Creator for the House of CHANEL.</p>
-            </div>
-            <div class="prices">
-              <p class="new-price">
-                $149.99
+             <p class="img-name">Gabrielle Essence Eau De Parfum</p>  
+             <p class="img-description">A floral,solar and voluptuous interpretation compsed by Olivier Polge,Perfumer-Creator for the House of CHANEL.</p>
+              <p class="new-price prices">
+                $149.99  <s class="old-price">$169.99</s>
               </p>
-              <p class="old-price">
-                <s>$169.99</s>
-              </p>
-            </div>
               <button>
                 <img src="icon-cart.svg" alt="icon-cart">
-                <p id="button">Add to Cart</p>
+                <span>Add to Cart</span>
               </button>  
           </div>    
       </div>
