--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
   </head>
   <body>
     <main>
+      <h1 class="sr-only">NFT Card Component</h1>
       <div class="card">
         <div class="picture">
           <picture>
-            <img src="image-product-desktop.jpg" alt="perfume-picture" class="img" srcset="">
+            <img src="image-product-desktop.jpg" alt="perfume-picture" class="img">
           </picture>
         </div>
           <div class="right">
