--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <main>
-      <h1 class="sr-only">NFT Card Component</h1>
+      <h1 class="sr-only">Product Card Component</h1>
       <div class="card">
         <div class="picture">
           <picture>
